kubernetes/services/ingress/pod-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: probe
  labels:
    function: probe
spec:
  containers:
    - name: httpd
      image: docker.io/ovidiufeodorov/httpd
      # imagePullPolicy: Always
