kubernetes/services/ingress/pod-service-a.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-a
  labels:
    function: serves-http
    affiliation: a
spec:
  containers:
    - name: httpd
      image: docker.io/ovidiufeodorov/httpd
      ports:
        - containerPort: 80
          protocol: TCP
