kubernetes/services/ingress/pod-service-b.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-b
  labels:
    function: serves-http
    affiliation: b
spec:
  containers:
    - name: httpd
      image: docker.io/ovidiufeodorov/httpd
      ports:
        - containerPort: 80
          protocol: TCP
