kubernetes/services/ingress/service-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: a
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    function: serves-http
    affiliation: a
