kubernetes/services/ingress/service-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: b
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    function: serves-http
    affiliation: b
