kubernetes/services/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: example
spec:
  rules:
    - host: a.local
      http:
        paths:
          - path: /
            backend:
              serviceName: a
              servicePort: 80
    - host: b.local
      http:
        paths:
          - path: /
            backend:
              serviceName: b
              servicePort: 80
